fix: 解決 Vercel 部署失敗 - 添加 .npmrc 以支持 legacy-peer-deps
問題：react-helmet-async 與 React 19 的 peer dependency 衝突
解決方案：
- 創建 .npmrc 文件，設置 legacy-peer-deps=true
- 更新 package.json，添加 npmConfig 配置
- 本地測試構建成功

影響：
- 允許 npm 安裝不完全匹配的 peer dependencies
- 解決 Vercel 部署時的依賴衝突問題
- 不影響應用程式功能

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.11.0"
   },
+  "npmConfig": {
+    "legacy-peer-deps": true
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
